<resources>
    <string name="app_name">ProxyNOTES</string>
    <string name="c1">Chapter 1:    Matter IN our Surroundings&#10;&#10;Duration:17.32</string>
    <string name="c2">Chapter 2:    </string>
    <string name="c3">Chapter 3:    </string>
    <string name="c4">Chapter 4:    </string>
    <string name="c5">Chapter 5:    </string>
    <string name="c6">Chapter 6:    </string>
    <string name="c7">Chapter 7:    </string>
    <string name="c8">Chapter 8:    </string>
    <string name="c9">Chapter 9:    </string>



</resources>
